config/samples/example-ns-labeled.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo2
  labels:
    cost-center: "123"
