config/samples/example-privilege-escalation.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      allowPrivilegeEscalation: true
  - name: sleeping-sidecar
    image: alpine
    command: ["sleep", "1h"]
