config/samples/example-privileged-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-privileged
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
      securityContext:
        privileged: true
    - name: sleeping-sidecar
      image: alpine
      command: ["sleep", "1h"]
