config/samples/example-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-loadbalancer
spec:
  selector:
    app: example
  ports:
    - port: 8765
      targetPort: 9376
  type: LoadBalancer
