config/samples/kubewarden_v1alpha1_admissionpolicy.yaml
apiVersion: policies.kubewarden.io/v1alpha1
kind: ClusterAdmissionPolicy
metadata:
  name: privileged-pods
spec:
  module: registry://ghcr.io/kubewarden/policies/pod-privileged:v0.1.5
  mutating: false
  resources:
  - pods
  operations:
  - CREATE
  - UPDATE
  settings:
    trusted_users:
    - alice
